--- a/templates/index.html
+++ b/templates/index.html
@@ -273,6 +273,11 @@
 					</div>
                 </div>
             </div>
+			<form action="search" method="get">
+				{%csrf_token%}
+				<input type="text" name="name" placeholder="Search by Phone or Email">
+				<button type="submit" >Search</button>
+		    </form>
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
@@ -284,18 +289,26 @@
                     </tr>
                 </thead>
                 <tbody>
-					{% for i in emp %}
-                    <tr>
-                        <td>{{i.name}}</td>
-                        <td>{{i.email}}</td>
-						<td>{{i.address}}</td>
-                        <td>{{i.phone}}</td>
-                        <td>
-                            <a href="update/{{i.id}}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                            <a href="delete/{{i.id}}" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
-                        </td>
-                    </tr>
-					{%endfor%}
+					{% if emp %}
+						{% for i in emp %}
+						<tr>
+							<td>{{i.name}}</td>
+							<td>{{i.email}}</td>
+							<td>{{i.address}}</td>
+							<td>{{i.phone}}</td>
+							<td>
+								<a href="update/{{i.id}}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+								<a href="delete/{{i.id}}" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+							</td>
+						</tr>
+						{%endfor%}
+					{% else %}
+						<td>Empty</td>
+						<td>Empty</td>
+						<td>Empty</td>
+						<td>Empty</td>
+						<td>No Action</td>
+					{%endif%}
                 </tbody>
             </table>
 
